# IVRyaa

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
scripts/: setup_audio.sh
src/ivryaa/: __init__.py  main.py
src/ivryaa/dialog/: __init__.py  intent.py  response.py  session.py
src/ivryaa/metrics/: __init__.py  collector.py  cpu.py  disk.py  memory.py  network.py
src/ivryaa/utils/: __init__.py  config.py  logger.py
src/ivryaa/voice/: __init__.py  recognizer.py  recorder.py  synthesizer.py
tests/: __init__.py  conftest.py
tests/test_dialog/: __init__.py  test_intent.py  test_response.py
tests/test_metrics/: __init__.py  test_cpu.py  test_disk.py  test_memory.py  test_network.py
tests/test_voice/: __init__.py  test_recognizer.py  test_recorder.py  test_synthesizer.py
